SERVER-3531 - yield in m/r when docs do not match