src/mongo/db/commands/mr.cpp
@@ -1195,6 +1195,11 @@ namespace mongo {
                         Timer mt;
                         // go through each doc
                         while ( cursor->ok() ) {
+                            if ( ! cursor->yieldSometimes( ClientCursor::WillNeed ) ) {
+                                cursor.release();
+                                break;
+                            }
+
                             if ( ! cursor->currentMatches() ) {
                                 cursor->advance();
                                 continue;
